fixed some layout issues

--- a/application/src/main/resources/static/finance.css
+++ b/application/src/main/resources/static/finance.css
@@ -61,4 +61,7 @@ h3 {
 	border-right: 0px;
 }
 
+.tab-pane {
+	width: 90%;
+}
 
